@@ -1,3 +1,10 @@
+2004-08-02  Reiner Steib  <Reiner.Steib@gmx.de>
+
+	* blink.pbm, blink.xpm, braindamaged.xpm, cry.xpm, dead.xpm,
+	evil.xpm, forced.xpm, frown.xpm, grin.xpm, indifferent.xpm,
+	reverse-smile.xpm, sad.pbm, sad.xpm, smile.xpm, time-date.el,
+	wry.xpm: Added new files from the v5_10 branch of Gnus.
+
 2004-07-22  Andreas Schwab  <schwab@suse.de>
 
 	Import Gnus 5.10 from the v5_10 branch of the Gnus repository.
